--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Plakatmuseum | Velkommen</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Dansk plakatmuseum i den gamle by. Lyt til mere information om vores plakater ved hjælp af vores QR-koder. Hør om plakaten du kigger på, og tilføj den til dine favoritter eller køb den i vores webshop">
+    <meta name="author" content="Ralf, Isha, Julie og Martina M. D. Tay">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,7 +29,7 @@
             <div class="panel">
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="plakater.html">Plakater</a></li>
-                <li><a href="favoritter.html">Favoritter</a></li>
+                <li><a href="favs.html">Favoritter</a></li>
             </div>
         </nav>
     </header>
@@ -46,10 +46,7 @@
     <footer>
         <p class="adress">Adresse: Viborgvej 2 <br> 8000 Aarhus C </p>
         <div>
-            <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/fb.png" class="some fb"></a>
-        </div>
-        <div>
-            <a href="https://www.instagram.com/?hl=da"><img src="images/insta.png" class="some insta"></a>
+            <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/face.png" class="some fb"></a>
         </div>
         <div>
             <a href="https://www.tripadvisor.dk/"><img src="images/trip.png" class="some trip"></a>
@@ -60,9 +57,9 @@
     <!--Her er jQuery :)-->
     <script type="text/javascript" src="JS/jquery-3.3.1.js"></script>
 
-    <!--    Her er min egen JS :)-->
+    <!--    Her er vores egen JS :)-->
     <script type="text/javascript" src="JS/script.js"></script>
-    <!-- End of Document  -------------------------->
+    <!---------------------------------------------------------------- End of Document  -------------------------->
 </body>
 
 </html>
