--- a/HTML/plakater.html
+++ b/HTML/plakater.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Plakatmuseum</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Plakatmuseum | Lesbiske er virkelige</title>
+    <meta name="description" content="Plakaten: lesbiske er virkelige. Lyt til mere info eller læs om den her. Denne særudstilling om LGBT har fokus plakater der blev brugt som middel til at få oplyst offentligheden om problematikken">
+    <meta name="author" content="Ralf, Isha, Julie og Martina M. D. Tay">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,22 +21,22 @@
 
 </head>
 
-<body>
+<body class="container">
     <header class="top">
         <a href="index.html"><img src="images/arrow.png" class="arrow one.column"></a>
-        <h1 class="plakatinfo">Plakatinfo | TITEL PÅ PLAKAT !!!!!!!!!!!!!</h1>
+        <h1 class="plakatinfo">Plakatinfo</h1>
         <hr>
     </header>
 
     <main class="nine.columns">
-        <h2 class="title">Titel på plakat</h2>
+        <h2 class="title">Lesbiske er virkelige</h2>
         <div class="icons">
-            <a href=""><img src="images/cart.png" class="stuff"></a>
+            <a href="http://shop.plakatmuseum.dk/"><img src="images/cart.png" class="stuff"></a>
             <a href="favs.html"><img src="images/heart.png" class="stuff"></a>
         </div>
         <div class="image">
             <div class="centered">
-                <img src="images/plakat.jpg" class="plakat">
+                <img src="images/pict1.png" class="plakat">
                 <img src="images/speaker.png" class="speaker" type="button" value="PLAY" onclick="play()">
                 <!--                                                                                        AUDIO INPUT HER-->
                 <audio id="audio" src="sound.mp3"></audio>
@@ -50,10 +50,7 @@
     <footer>
         <p class="adress"> Adresse: <br> Viborgvej 2 <br> 8000 Aarhus C </p>
         <div>
-            <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/fb.png" class="some fb"></a>
-        </div>
-        <div>
-            <a href="https://www.instagram.com/?hl=da"><img src="images/insta.png" class="some insta"></a>
+            <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/face.png" class="some fb"></a>
         </div>
         <div>
             <a href="https://www.tripadvisor.dk/"><img src="images/trip.png" class="some trip"></a>
