--- a/HTML/favs.html
+++ b/HTML/favs.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Plakatmuseum | Favoritter</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Tilføj og gense dine favoritter, gem dine yndlingsplakater her eller køb dem i vores webshop">
+    <meta name="author" content="Ralf, Isha, Julie og Martina M. D. Tay">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,33 +19,48 @@
     <!--------- our very own stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 
 <body>
     <header class="top">
-        <a href="index.html"><img src="images/arrow.png" class="arrow one.column"></a>
+        <a href="plakater.html"><img src="images/arrow.png" class="arrow one.column"></a>
         <h1 class="plakatinfo">Plakatinfo</h1>
         <hr>
     </header>
 
     <main class="nine.columns">
-        <h2 class="title">Favoritter <img src="images/heart.png" style="width: 10%"></h2>
-        <h3>Titel på plakat nr1</h3>
-        <img src="images/plakat.jpg">
+        <h2 class="title">Favoritter <img src="images/heart.png" style="width: 30px"></h2>
 
+        <section id="Wrapper">
+            <div id="Slideshow">
+                <div id="Slider">
+                    <img src="images/pict1.png" />
+                    <img src="images/pict2.png" />
+                    <img src="images/pict3.png" />
+                </div>
+                <div id="Arrows">
+                    <a href="#" class="arrowL" id="Prev">&lt;</a>
+                    <a href="#" class="arrowR" id="Next">&gt;</a>
+                </div>
+            </div>
+        </section>
+
+
+        <!-----------------------------------------------------------------------------------        No problem no more-->
 
     </main>
 
     <footer>
-        <p class="adress"> Adresse: <br> Viborgvej 2 <br> 8000 Aarhus C </p>
-        <div>
-            <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/fb.png" class="some fb"></a>
-        </div>
-        <div>
-            <a href="https://www.instagram.com/?hl=da"><img src="images/insta.png" class="some insta"></a>
-        </div>
-        <div>
-            <a href="https://www.tripadvisor.dk/"><img src="images/trip.png" class="some trip"></a>
+        <div class="footer">
+            <p class="adress"> Adresse: <br> Viborgvej 2 <br> 8000 Aarhus C </p>
+            <div>
+                <a href="https://www.facebook.com/DanskPlakatmuseum/?fref=ts"><img src="images/face.png" class="some fb"></a>
+            </div>
+            <div>
+                <a href="https://www.tripadvisor.dk/"><img src="images/trip.png" class="some trip"></a>
+            </div>
         </div>
     </footer>
 
